--- a/dashboard.html
+++ b/dashboard.html
@@ -4,11 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="tailwindstyle.css">
+    <script src="Tailwind/tailwind.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+    
 </head>
 <body>
-    <div>
-        
+    <div class="bg-gradient-to-r from-purple-800 to-white w-[100%] h-[620px] ">
+        <!-- search bar -->
+        <div class="flex  text-white pt-[40px] " >
+            <p class="text-2xl font-[700]  text-purple-800 ml-[300px] mt-[10px] "> Home </p>
+            <ion-icon name="chevron-down-outline" class=" text-purple-800   w-[30px] h-[30px] font-[700] ml-[5px] mt-[15px]" ></ion-icon>
+            <input type="search" placeholder="search" class="w-[700px] h-[50px] rounded-[50px] pl-[60px] ml-[25px]  text-purple-800 placeholder:text-2xl t font-[700]">
+            <ion-icon name="search-outline" class=" w-[20px] h-[20px] text-purple-800 ml-[-50px] mt-[20px] font-[700]" ></ion-icon>
+            <ion-icon name="notifications-outline" class="w-[30px] h-[30px] text-purple-800 ml-[45px] mt-[10px]" ></ion-icon>
+            <ion-icon name="logo-wechat" class="w-[30px] h-[30px] text-purple-800  ml-[10px] mt-[10px]"  ></ion-icon>
+            <img src="dating-imgages/falz.jpeg" alt="" class="w-[30px] h-[30px] rounded-[20px] ml-[10px] mt-[10px] ">
+        </div>
+        <!-- End of search bar -->
+        <div class=" w-[20%] h-[500px] bg-white mt-[20px] ml-[10px] rounded-[10px]"></div>
+        <div class="w-[75%] h-[500px] bg-white mt-[-500px] ml-[290px] rounded-[10px]">
+         <img src="dating-imgages/falz.jpeg" alt="" class="w-[30px] h-[40px] rounded-[30px] ml-[880px] pt-[15px]">
+         <p class="text-purple-800 ml-[920px] text-[12px] mt-[-20px]">Paul Chukwuma</p>
+         <div class="mt-[-25px]"><ion-icon name="notifications-outline" class=" ml-[840px] text-purple-800 w-[20px] h-[20px]" ></ion-icon></div>
+         <div class="mt-[-25px]"><ion-icon name="mail-open-outline" class="ml-[800px] text-purple-800 w-[20px] h-[20px]"></ion-icon></div>
+           <div class="mt-[-25px] text-purple-800 ml-[135px] " ><ion-icon name="videocam-off-outline" class="w-[20px] h-[20px]"></ion-icon></div>
+            <div class="mt-[-25px]"> <ion-icon name="globe-outline" class="text-purple-800 ml-[770px] w-[20px] h-[20px]"></ion-icon></div>
+            <div class="mt-[-25px]"><ion-icon name="trash-outline" class="text-purple-800 w-[20px] h-[20px] ml-[40px]"></ion-icon></div>
+            <div class="mt-[-25px]"><div><ion-icon name="person-outline" class="text-purple-800 w-[20px] h-[20px] ml-[100px]"></ion-icon></div>
+            <div class="mt-[-25px]"><ion-icon name="stats-chart-outline" class="text-purple-800 w-[20px] h-[20px] ml-[70px]"></ion-icon></div>
+            <p class="ml-[50px] mt-[30px] text-purple-800 text-2xl">Profile</p>
+            <img src="dating-imgages/falz.jpeg" alt="" class="mt-[20px] ml-[50px] w-[300px] h-[300px] rounded-[20px]">
+            <p class="ml-[120px] mt-[10px] text-purple-800">Paul Chukwuma</p>
+            <p class="ml-[130px] mt-[px] text-purple-800">43Years</p>
+            <div class="ml-[380px] mt-[-340px]">
+                <p class=" text-purple-800"> <b>About</b></p>
+                <textarea name="" id="" cols="50" rows="10" class="text-purple-800  outline-none " ></textarea>
+            </div>
+            <div class="ml-[820px] mt-[-280px]">
+                <p class="text-purple-800 ml-[10px]">Interest</p>
+                <div class="w-[150px] h-[30px] bg-purple-800 rounded-[20px] mt-[10px] text-white pl-[40px]">Gaming</div>
+                <div class="w-[150px] h-[30px] bg-blue-500 rounded-[20px] mt-[10px] text-white pl-[40px]">Travelling</div>
+                <div class="w-[150px] h-[30px] bg-red-800 rounded-[20px] mt-[10px] text-white pl-[40px]">Reading</div>
+                <div class="w-[150px] h-[30px] bg-green-800 rounded-[20px] mt-[10px] text-white pl-[40px]">Cooking</div>
+                <div class="w-[150px] h-[30px] bg-yellow-600 rounded-[20px] mt-[10px] text-white pl-[40px]">Movies</div>
+            </div>
+             </div>
     </div>
 </body>
 </html>
