--- a/dashboard.html
+++ b/dashboard.html
@@ -12,18 +12,27 @@
 </head>
 <body>
     <div class="bg-gradient-to-r from-purple-800 to-white w-[100%] h-[620px] ">
+        
         <!-- search bar -->
         <div class="flex  text-white pt-[40px] " >
-            <p class="text-2xl font-[700]  text-purple-800 ml-[300px] mt-[10px] "> Home </p>
+            <h1 class="pt-[10px] text-4xl pl-[30px] font-[700] shadow">2-KNACK</h1>
+            <p class="text-2xl font-[700]  text-purple-800 ml-[150px] mt-[10px] "> Home </p>
             <ion-icon name="chevron-down-outline" class=" text-purple-800   w-[30px] h-[30px] font-[700] ml-[5px] mt-[15px]" ></ion-icon>
-            <input type="search" placeholder="search" class="w-[700px] h-[50px] rounded-[50px] pl-[60px] ml-[25px]  text-purple-800 placeholder:text-2xl t font-[700]">
+            <input type="text" placeholder="search" class="w-[700px] h-[50px] rounded-[50px] pl-[60px] ml-[25px]  text-purple-800 placeholder:text-2xl  font-[700] outline-none">
             <ion-icon name="search-outline" class=" w-[20px] h-[20px] text-purple-800 ml-[-50px] mt-[20px] font-[700]" ></ion-icon>
             <ion-icon name="notifications-outline" class="w-[30px] h-[30px] text-purple-800 ml-[45px] mt-[10px]" ></ion-icon>
             <ion-icon name="logo-wechat" class="w-[30px] h-[30px] text-purple-800  ml-[10px] mt-[10px]"  ></ion-icon>
             <img src="dating-imgages/falz.jpeg" alt="" class="w-[30px] h-[30px] rounded-[20px] ml-[10px] mt-[10px] ">
         </div>
         <!-- End of search bar -->
-        <div class=" w-[20%] h-[500px] bg-white mt-[20px] ml-[10px] rounded-[10px]"></div>
+        <div class=" w-[20%] h-[500px] bg-white mt-[20px] ml-[10px] rounded-[10px] pl-[40px] text-purple-800 pt-[40px] ">
+            <a href=""><div class="flex  hover:font-[700] hover:text-[20px]"><img src="dating-imgages/falz.jpeg" alt="" class="w-[20px] h-[20px] rounded-[20px] mt-1   "><p class="ml-2"> Profile</p></div></a>
+            <a href=""><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon name="videocam-off-outline" class=" mt-1"></ion-icon><p class="ml-2"> Upload video/image</p></div></a>
+            <a href=""><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon class="mt-1 " name="car-outline"></ion-icon><p class="ml-1"> Change Status</p></div></a>
+            <a href=""><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon name="person-outline" class="mt-1"></ion-icon><p class="ml-1"> Edit Profile</p></div></a>
+            <a href=""><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon name="notifications-outline" class="mt-1" ></ion-icon><p class="ml-1"> Notification</p></div></a>
+            <a href=""><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon name="exit-outline" class="mt-1"></ion-icon><p class="ml-1"> Logout</p></div></a>
+        </div>
         <div class="w-[75%] h-[500px] bg-white mt-[-500px] ml-[290px] rounded-[10px]">
          <img src="dating-imgages/falz.jpeg" alt="" class="w-[30px] h-[40px] rounded-[30px] ml-[880px] pt-[15px]">
          <p class="text-purple-800 ml-[920px] text-[12px] mt-[-20px]">Paul Chukwuma</p>
@@ -40,16 +49,12 @@
             <p class="ml-[130px] mt-[px] text-purple-800">43Years</p>
             <div class="ml-[380px] mt-[-340px]">
                 <p class=" text-purple-800"> <b>About</b></p>
-                <textarea name="" id="" cols="50" rows="10" class="text-purple-800  outline-none " ></textarea>
+                <p class="mt-[10px]">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, tempora itaque sunt, praesentium <br>
+                    impedit officiis vitae unde harum voluptas sequi est eius rerum. Quasi maxime ratione repellat totam sequi <br>
+                    earum magni, nam velit deserunt eum quidem numquam <br>
+                    placeat suscipit soluta unde fugiat iusto provident dolores. Quae iusto eligendi dicta laboriosam.</p>
             </div>
-            <div class="ml-[820px] mt-[-280px]">
-                <p class="text-purple-800 ml-[10px]">Interest</p>
-                <div class="w-[150px] h-[30px] bg-purple-800 rounded-[20px] mt-[10px] text-white pl-[40px]">Gaming</div>
-                <div class="w-[150px] h-[30px] bg-blue-500 rounded-[20px] mt-[10px] text-white pl-[40px]">Travelling</div>
-                <div class="w-[150px] h-[30px] bg-red-800 rounded-[20px] mt-[10px] text-white pl-[40px]">Reading</div>
-                <div class="w-[150px] h-[30px] bg-green-800 rounded-[20px] mt-[10px] text-white pl-[40px]">Cooking</div>
-                <div class="w-[150px] h-[30px] bg-yellow-600 rounded-[20px] mt-[10px] text-white pl-[40px]">Movies</div>
-            </div>
+            
              </div>
     </div>
 </body>
