--- a/dashboard.html
+++ b/dashboard.html
@@ -28,8 +28,8 @@
         <div class=" w-[20%] h-[500px] bg-white mt-[20px] ml-[10px] rounded-[10px] pl-[40px] text-purple-800 pt-[40px] ">
             <a href=""><div class="flex  hover:font-[700] hover:text-[20px]"><img src="dating-imgages/falz.jpeg" alt="" class="w-[20px] h-[20px] rounded-[20px] mt-1   "><p class="ml-2"> Profile</p></div></a>
             <a href=""><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon name="videocam-off-outline" class=" mt-1"></ion-icon><p class="ml-2"> Upload video/image</p></div></a>
-            <a href=""><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon class="mt-1 " name="car-outline"></ion-icon><p class="ml-1"> Change Status</p></div></a>
-            <a href=""><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon name="person-outline" class="mt-1"></ion-icon><p class="ml-1"> Edit Profile</p></div></a>
+            <a href=""><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon class="mt-1 " name="car-outline"></ion-icon><p class="ml-1"> My Hookup</p></div></a>
+            <a href=""><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon name="person-outline" class="mt-1"></ion-icon><p class="ml-1"> Update Profile</p></div></a>
             <a href=""><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon name="notifications-outline" class="mt-1" ></ion-icon><p class="ml-1"> Notification</p></div></a>
             <a href=""><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon name="exit-outline" class="mt-1"></ion-icon><p class="ml-1"> Logout</p></div></a>
         </div>
