--- a/dating.html
+++ b/dating.html
@@ -4,31 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>male-signup-page</title>
-    <link rel="stylesheet" href="tailwindstyle.css">
+    <script src="Tailwind/tailwind.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+    <link rel="stylesheet" href="custom.css">
 </head>
 <body >
-    <div class="lg:flex ">
+    <div class="flex ">
         <!-- pic begins -->
-         <img src="  dating-imgages/img.webp" alt="" class="hidden lg:block lg:w-[500px] lg:h-[650px]   ">
+         <img src="dating-imgages/male-pic.jpeg" alt=""  class=" hidden  lg:block   w-[500px] h-[650px]   ">
         <!-- pic ends -->
         <!-- form begins -->
-        <div class=" w-[100%] h-[750px] md:h-[950px] md:text-[20px] lg:w-[70%] lg:h-[650px] lg:pt-[0px] bg-gradient-to-r from-purple-800 to-white   ">
-            <h1 class="  pl-[150px] pt-[30px] md:pl-[250px] md:text-6xl lg:pl-[360px] text-4xl lg:text-4xl font-[700] text-white  ">Sign Up</h1>
-            <form action="" class="ml-[15px]  lg:ml-[50px]  mt-[30px] rounded-[10px]">
-                <input type="text" placeholder="Firstname" class="  w-[390px] lg:w-[370px] h-[40px] md:h-[80px]  lg:h-[40px] rounded-[5px] text-purple-800 pl-[20px] outline-purple-800 placeholder:text-purple-800 text-[20px] md:w-[357px]" required>
-                <input type="text" placeholder="Lastname" class="w-[390px] mt-[10px] lg:w-[370px] h-[40px] md:h-[80px] lg:h-[40px] lg:ml-[15px]  rounded-[5px] text-purple-800 pl-[20px] outline-purple-800 placeholder:text-purple-800 text-[20px] md:w-[357px]" required>
-                <input type="text" placeholder="Location" class="w-[390px] mt-[10px]  lg:w-[370px] h-[40px] md:h-[80px] lg:h-[40px] lg:mt-[30px] md:mt-[20px] rounded-[5px] text-purple-800 pl-[20px]  outline-purple-800 placeholder:text-purple-800 text-[20px] md:w-[357px]" required>
-                <input type="text" placeholder="occupation" class=" w-[390px] mt-[10px]  lg:w-[370px] h-[40px] md:h-[80px] lg:h-[40px] lg:ml-[15px] rounded-[5px] text-purple-800 pl-[20px] outline-purple-800 placeholder:text-purple-800 text-[20px] md:w-[357px]" required><br>
-                <input type="text" placeholder="Home Address" class="w-[390px] mt-[10px] lg:mt-[30px] md:mt-[20px] lg:w-[755px] h-[40px] md:h-[80px] lg:h-[40px] rounded-[5px] text-purple-800 pl-[20px] outline-purple-800 placeholder:text-purple-800 text-[20px] md:w-[715px]" required><br>
-                <input type="text" placeholder="Business / Office Address" class=" w-[390px] mt-[10px] lg:mt-[30px] md:mt-[20px] lg:w-[755px] h-[40px] md:h-[80px] lg:h-[40px] rounded-[5px] text-purple-800 pl-[20px] outline-purple-800 placeholder:text-purple-800 text-[20px] md:w-[715px]" required><br>
-                <input type="text" placeholder="Phone " class="w-[390px] mt-[10px] lg:w-[370px] md:h-[80px] md:mt-[20px] h-[40px] lg:h-[40px] lg:mt-[30px] md:mt-[20px] rounded-[5px] text-purple-800 pl-[20px] outline-purple-800 placeholder:text-purple-800 text-[20px] md:w-[357px]" required>
-                <input type="email" placeholder="Email" class=" w-[390px] mt-[10px] lg:w-[370px] md:h-[80px] h-[40px] lg:h-[40px] lg:ml-[15px] rounded-[5px] text-purple-800 pl-[20px] outline-purple-800 placeholder:text-purple-800 text-[20px] md:w-[357px]" required>
-                <input type="password" placeholder="Password" class=" w-[390px] mt-[10px] lg:w-[370px] h-[40px] md:h-[80px] lg:h-[40px] lg:mt-[30px] md:mt-[20px] rounded-[5px] text-purple-800 pl-[20px] outline-purple-800 placeholder:text-purple-800 text-[20px] md:w-[357px]" required>
-                <input type="password" placeholder="Confirm Password" class="w-[390px] mt-[10px] lg:w-[370px] h-[40px] md:h-[80px] lg:h-[40px] lg:ml-[15px] rounded-[5px] text-purple-800 pl-[20px] outline-purple-800 placeholder:text-purple-800 text-[20px] md:w-[357px]" required><br>
+        <div class="  w-[100%] h-[750px] md:h-[950px] md:text-[20px] lg:w-[100%] lg:h-[950px] lg:pt-[0px]  ">
+            <h1 class="   pl-[100px] pt-[30px] md:pl-[250px] lg:-[100px]  xl:pl-[360px] text-4xl  font-[700] text-purple-800  ">Create Account</h1>
+            <form action="" class="ml-[15px]  lg:ml-[15px] xl:ml-[50px]  mt-[30px] rounded-[10px]">
+                <div>
+                <ion-icon name="person-outline" class="mr-[-30px]"></ion-icon>
+                <input type="text" placeholder="Firstname" class=" w-[390px] xl:w-[370px] lg:w-[313px]  md:w-[357px]  h-[40px] md:h-[50px]  lg:h-[40px] rounded-[5px] text-purple-800 pl-[30px] focus:outline-purple-800 placeholder:text-gray-800 text-[20px] border-2 border-black"  required></div>
+                <div class="mt-[0px] md:mt-[-60px]  md:ml-[370px] lg:ml-[320px] xl:ml-[380px] lg:mt-[-50px] xl:mt-[-50px]">
+                <ion-icon name="person-outline" class=" lg:mr-[-45px] mr-[-30px] "></ion-icon>
+                <input type="text" placeholder="Lastname" class=" w-[390px] mt-[10px] xl:w-[370px] lg:w-[313px] h-[40px] md:w-[357px] md:h-[50px] lg:h-[40px] lg:ml-[15px]  rounded-[5px] text-purple-800 pl-[30px] focus:outline-purple-800 placeholder:text-gray-800 text-[20px]  border-2 border-black" required></div>
+                <div >
+                <ion-icon name="location-outline" class="mr-[-30px]"></ion-icon>
+                <input type="text" placeholder="Location" class=" w-[390px] mt-[10px]  xl:w-[370px] lg:w-[313px] h-[40px] md:h-[50px] lg:h-[40px] lg:mt-[30px] md:mt-[20px] md:w-[357px]  rounded-[5px] text-purple-800 pl-[30px]  focus:outline-purple-800 placeholder:text-gray-800 text-[20px] border-2 border-black" required></div>
+               <div class="mt-[0px] md:mt-[-60px]  md:ml-[370px] lg:mt-[-50px] lg:ml-[320px] xl:ml-[380px]  xl:mt-[-50px]">
+                <ion-icon name="briefcase-outline" class="lg:mr-[-45px] mr-[-30px]"></ion-icon>
+                <input type="text" placeholder="occupation" class="  w-[390px] mt-[10px] md:w-[357px] lg:w-[313px]  xl:w-[370px] h-[40px] md:h-[50px] lg:h-[40px] lg:ml-[15px] rounded-[5px] text-purple-800 pl-[30px] focus:outline-purple-800 placeholder:text-gray-800 text-[20px]  border-2 border-black" required><br></div>
+                 <div>
+                <ion-icon name="location-outline" class="mr-[-30px]"></ion-icon>
+                <input type="text" placeholder="Home Address" class=" w-[390px] mt-[10px] lg:mt-[30px] md:mt-[20px] xl:w-[755px] lg:w-[630px] md:w-[725px] h-[40px] md:h-[50px] lg:h-[40px]  rounded-[5px] text-purple-800 pl-[30px] focus:outline-purple-800 placeholder:text-gray-800 text-[20px]  border-2 border-black" required><br></div>
+                <div >
+                <ion-icon name="location-outline" class="mr-[-30px]"></ion-icon>
+                <input type="text" placeholder="Business / Office Address" class="  w-[390px] mt-[10px] lg:mt-[30px] md:mt-[20px] xl:w-[755px] lg:w-[630px] h-[40px] md:h-[50px] lg:h-[40px]  md:w-[725px]  rounded-[5px] text-purple-800 pl-[30px] focus:outline-purple-800 placeholder:text-gray-800 text-[20px] border-2 border-black" required><br></div>
+                <div >
+                <ion-icon name="phone-portrait-outline" class="mr-[-30px]"></ion-icon>
+                <input type="text" placeholder="Phone " class="   w-[390px] mt-[10px] lg:w-[313px] xl:w-[370px] md:h-[50px] md:mt-[20px] h-[40px] lg:h-[40px] lg:mt-[30px]  md:w-[357px]  rounded-[5px] text-purple-800 pl-[30px] focus:outline-purple-800 placeholder:text-gray-800 text-[20px] border-2 border-black" required></div>
+               <div class="mt-[0px] md:mt-[-60px] lg:mt-[-50px] lg:ml-[320px] md:ml-[370px]  xl:ml-[380px]  xl:mt-[-50px]">
+                <ion-icon name="mail-outline" class="lg:mr-[-45px] mr-[-30px]"></ion-icon>
+                <input type="email" placeholder="Email" class=" w-[390px] mt-[10px] lg:w-[313px] md:h-[50px] xl:w-[370px] h-[40px] lg:h-[40px] lg:ml-[15px] md:w-[357px] rounded-[5px] text-purple-800 pl-[30px] focus:outline-purple-800 placeholder:text-gray-800 text-[20px]  border-2 border-black" required></div>
+                <div class="xl:mt-[10px]" >
+                    <ion-icon name="eye-outline" class="mr-[-30px]"></ion-icon>
+                    <input type="password" placeholder="Password" class="   w-[390px] mt-[20px] lg:w-[313px] h-[40px] xl:w-[370px] md:h-[50px] lg:h-[40px]  md:w-[357px]  rounded-[5px] text-purple-800 pl-[30px] focus:outline-purple-800 placeholder:text-gray-800 text-[20px]  border-2 border-black" required></div>
+                   <div class="mt-[0px] md:mt-[-70px]  md:ml-[370px] lg:ml-[320px] xl:ml-[380px]  xl:mt-[-70px]">
+                    <ion-icon name="eye-outline" class="lg:mr-[-45px] mr-[-30px]"></ion-icon>
+                <input type="password" placeholder="Confirm password" class="w-[390px] mt-[10px] lg:w-[313px] h-[40px] xl:w-[370px] md:h-[50px] lg:h-[40px] lg:ml-[15px] lg:mt-[30px] md:mt-[20px]  md:w-[357px] rounded-[5px] text-purple-800 pl-[30px] focus:outline-purple-800 placeholder:text-gray-800 text-[20px] border-2 border-black" required><br></div>
+                
                 <input type="checkbox" class="  mt-[30px] md:mt-[35px]">
-                <p class="text-white  ml-[30px] mt-[-25px] md:mt-[-30px]">Agree to  Terms & Conditions</p>
-                <button type="submit" class="text-black bg-white w-[390px] mt-[10px] lg:w-[755px] md:w-[700px] md:mt-[20px] md:h-[80px] h-[40px] lg:h-[40px] text-[20px]  lg:mt-[15px] text-[purple-800] rounded-[5px] md:w-[715px] ">Sign up</button>
-                <p class="text-white mt-[5px] ml-[50px] lg:ml-[270px] md:ml-[250px]" >Already have an account?<a href="" class="text-purple-800 "> sign in.</a></p>
+                <p class="text-purple-800  ml-[30px] mt-[-25px] ">Agree to  Terms & Conditions</p>
+                <button type="submit" class="text-white bg-purple-800  ml-[80px] md:ml-[150px] lg:ml-[80px] xl:ml-[150px] w-[200px] mt-[10px] lg:w-[455px] md:w-[400px] md:mt-[20px] md:h-[50px] h-[40px] lg:h-[40px] rounded-[20px] md:rounded-[50px]  ">Sign up</button>
+                <p class="text-purple-800 mt-[5px] ml-[50px] md:ml-[200px]  xl:ml-[200px] lg:ml-[150px] " >Already have an account?<a href="" class="text-purple-800 "> sign in.</a></p>
                 
             </form>
         </div>
