--- a/landingpage2.html
+++ b/landingpage2.html
@@ -72,7 +72,7 @@
 
             <section class="photo-group-1  py-8 w-screen bg-black ">
                   <div >
-                        <h1 class="calligraffitti-regular text-white text-center dm-sans-regular mt-14 font-semibold italic text-5xl">Exotic <span class="bg-clip-text text-transparent bg-gradient-to-r from-purple-600 to-pink-300 ">women</span></h1>
+                        <h1 class="calligraffitti-regular text-white text-center dm-sans-regular mt-14 font-semibold italic text-5xl">Exotic <span class="bg-clip-text text-transparent bg-gradient-to-r from-purple-600 to-pink-300 " data-aos="slide-right">women</span></h1>
                   </div>
                   <div class=" slider-wrapper mt-10 mx-auto py-5 w-[90vw] pb-5 rounded-xl">
                         
