--- a/landingpage2.html
+++ b/landingpage2.html
@@ -19,7 +19,6 @@
          <!-- Bootstrapicons-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
   
 </head>
@@ -211,7 +210,7 @@
 
             <section class="">
               <div class="w-[70vw] md:w-[90vw] lg:w-[70vw] mx-auto card-cont space-y-10  text-center mt-10 ">
-                <h1 class="text-3xl font-semibold calligraffitti-regular ">Lorem ipsum dolor   <span class="bg-clip-text text-transparent bg-gradient-to-r from-purple-600 to-pink-500">amet consectetur</span>  sit, <p class="bg-clip-text text-transparent bg-gradient-to-r from-purple-600 to-pink-500">adipisicing elit. <span class="text-black">Aspernatur, alias!</span></p></h1>
+                <h1 class="text-3xl font-semibold calligraffitti-regular ">Explore intimate   <span class="bg-clip-text text-transparent bg-gradient-to-r from-purple-600 to-pink-500">connections</span>  with <p class="bg-clip-text text-transparent bg-gradient-to-r from-purple-600 to-pink-500">like-minded adults <span class="text-black">For free!</span></p></h1>
                 <div class="cards flex flex-col md:flex-row space-y-10 md:space-y-0 md:space-x-10">
                   <div class="bg-transparent border-2 space-y-5 px-2 py-5 shadow-lg border-purple-800 w-[70vw] md:w-1/3   rounded-xl">
                     <img src="./asset/bikinivector.png" alt="" width="350" class="mx-auto">
@@ -230,7 +229,7 @@
                     </p>
                       <p class="text-center text-purple-700 font-semibold dm-sans-regular  ">Free to Use</p>
                          <a href="" >
-                          <button class=" mt-5 px-3 py-2 border-2 border-purple-600 bg-clip-text text-transparent bg-gradient-to-r from-purple-600 to-pink-400    rounded-xl shadow-lg hover:bg-purple-800  hover:opacity-60">See fat ass</button>
+                          <button class=" mt-5 px-3 py-2 border-2 border-purple-600 bg-clip-text text-transparent bg-gradient-to-r from-purple-600 to-pink-400    rounded-xl shadow-lg hover:bg-purple-800  hover:opacity-60">Hookup for free</button>
                          </a>
                   </div>
                   <div class="bg-transparent border-2 px-2 py-5 shadow-lg border-purple-800 w-[70vw] md:w-1/3  space-y-5 rounded-xl">
@@ -339,6 +338,8 @@
               </div>
               </footer>
               
+
+              <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
               <script defer>
                   var typed = new Typed('#el', {
