--- a/landingpage2.html
+++ b/landingpage2.html
@@ -223,7 +223,7 @@
                          </a>
                   </div>
                   <div class="bg-transparent border-2  px-2 py-5 shadow-lg border-purple-800 w-[70vw] md:w-1/3 space-y-5 rounded-xl">
-                    <img src="./asset/sheets.jfif" alt="">
+                    <img src="./asset/bedin.jfif" alt="">
                     <p>
                       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo quas facere hic rem quae, doloribus eos, harum, quidem nostrum doloremque nulla autem exercitatio
                     </p>
