--- a/femaledashboard.html
+++ b/femaledashboard.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="./src/output.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 <body class="lg:bg-gradient-to-r from-purple-800 to-white">
 
