--- a/login.html
+++ b/login.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="src/output.css">
+    <!-- <link rel="stylesheet" href="src/output.css"> -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 <body class="bg-white">
 <div class="lg:flex py-10 lg:px-20"> 
