notification, update, logout and hookup included

--- a/dating.html
+++ b/dating.html
@@ -13,10 +13,10 @@
 <body >
     <div class="flex ">
         <!-- pic begins -->
-         <img src="dating-imgages/male-pic.jpeg" alt=""  class=" hidden  lg:block   w-[1100px] h-[650px]   ">
+         <img src="dating-imgages/65344_04.jpg" alt=""  class=" hidden  lg:block   w-[900px] h-[630px]   ">
         <!-- pic ends -->
         <!-- form begins -->
-        <div class="  w-[100%] h-[750px] md:h-[950px] md:text-[20px] lg:w-[100%] lg:h-[710px] lg:pt-[0px]  ">
+        <div class="  w-[100%] h-[750px] md:h-[950px] md:text-[20px] lg:w-[100%] lg:h-[600px] lg:pt-[0px]  ">
             <h1 class="   pl-[100px] pt-[30px] md:pl-[250px] lg:-[100px]  xl:pl-[360px] text-4xl  font-[700] text-purple-800  ">Create Account</h1>
             <form action="" class="ml-[15px]  lg:ml-[15px] xl:ml-[50px]  mt-[30px] rounded-[10px]">
                 <div>
