Remove: previous landing pafe

--- a/landingPage.html
+++ b/landingPage.html
@@ -223,6 +223,44 @@
                      </div>
             </section>
 
+
+            <section class="">
+              <div class="w-[70vw] md:w-[90vw] lg:w-[70vw] mx-auto card-cont space-y-10  text-center mt-10 ">
+                <h1 class="text-3xl font-semibold calligraffitti-regular ">Explore intimate   <span class="bg-clip-text text-transparent bg-gradient-to-r from-purple-600 to-pink-500">connections</span>  with <p class="bg-clip-text text-transparent bg-gradient-to-r from-purple-600 to-pink-500">like-minded adults <span class="text-black">For free!</span></p></h1>
+                <div class="cards   flex flex-col md:flex-row space-y-10 md:space-y-0 md:space-x-10">
+                  <div class="bg-transparent  hover:bg-purple-700  hover:opacity-80 hover:text-white  border-2 space-y-5 px-2 py-5 shadow-lg border-purple-800 w-[70vw] md:w-1/3   rounded-xl">
+                    <img src="./asset/bikinivector.png" alt="" width="350" class="mx-auto">
+                    <p>
+                     Whatever your type is, you'll find them here! Different shapes, sizes and complexions!
+                    </p>
+                      <p class="text-center text-purple-700  font-semibold dm-sans-regular  ">Different Categories</p>
+                         <a href="" >
+                          <button class=" mt-5 px-3 py-2 border-2 border-purple-600 bg-clip-text text-transparent bg-gradient-to-r from-purple-600 to-pink-400    rounded-xl shadow-lg hover:bg-purple-800  hover:opacity-60">See fat ass</button>
+                         </a>
+                  </div>
+                  <div class="bg-transparent hover:bg-purple-700 hover:opacity-70 hover:text-white border-2  px-2 py-5 shadow-lg border-purple-800 w-[70vw] md:w-1/3 space-y-5 rounded-xl">
+                    <img src="./asset/bedin.jfif" alt="">
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo quas facere hic rem quae, doloribus eos, harum, quidem nostrum doloremque nulla autem exercitatio
+                    </p>
+                      <p class="text-center text-purple-700 font-semibold dm-sans-regular  ">Free to Use</p>
+                         <a href="login.html" >
+                          <button class=" mt-5 px-3 py-2 border-2 border-purple-600 bg-clip-text text-transparent bg-gradient-to-r from-purple-600 to-pink-400    rounded-xl shadow-lg hover:bg-purple-800  hover:opacity-60">Hookup for free</button>
+                         </a>
+                  </div> 
+                  <div class=" hover:bg-transparent  bg-purple-700 border-2 text-white opacity-80 hover:text-black px-2 py-5 shadow-lg border-purple-800 w-[70vw] md:w-1/3  space-y-5 rounded-xl">
+                     <img src="./asset/sexylips.png" alt="">
+                    <p>
+                      Seductive and mischievious women. They know to tantalize and satisfy you!</p>
+                      <p class="text-center text-purple-700 font-semibold dm-sans-regular">Runs Girls Available</p>
+                         <a href="createaccount.html" >
+                          <button class=" mt-5 px-3 py-2 border-2 border-purple-600 bg-clip-text text-transparent bg-gradient-to-r from-white to-pink-400    rounded-xl shadow-lg hover:bg-purple-800  hover:opacity-60">Start Hooking up</button>
+                         </a>
+                  </div>
+                </div>
+              </div>
+            </section>
+
       </main>
 
 
