--- a/logout.html
+++ b/logout.html
@@ -33,7 +33,7 @@
         <div class="hidden lg:block xl:block w-[80%] lg:w-[20%] xl:w-[20%] h-[400px] lg:h-[400px] xl:h-[500px] bg-purple-800 mt-[20px] ml-[20px]  pl-[40px] text-white pt-[40px]  " id="dashboard" style="border-top-left-radius: 70px;">
             <div class="flex  hover:font-[700] hover:text-[20px]"><ion-icon name="home-outline" class="mt-9"></ion-icon><p class="ml-2 mt-[30px]"> Home</p></div>
             <a href="dashboard.html"><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><img src="dating-imgages/falz.jpeg" alt="" class="w-[20px] h-[20px] rounded-[50px] mt-1   "><p class="ml-2"> Profile</p></div></a>
-            <a href=""><div class="flex  hover:font-[700] hover:text-[19px] mt-[20px]"><ion-icon name="videocam-off-outline" class=" mt-1"></ion-icon><p class="ml-2"> Upload video/image</p></div></a>
+            <a href="upload.html"><div class="flex  hover:font-[700] hover:text-[19px] mt-[20px]"><ion-icon name="videocam-off-outline" class=" mt-1"></ion-icon><p class="ml-2"> Upload video/image</p></div></a>
             <a href="hookup.html"><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon class="mt-1 " name="car-outline"></ion-icon><p class="ml-1"> My Hookup</p></div></a>
             <a href="update.html"><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon name="person-outline" class="mt-1"></ion-icon><p class="ml-1"> Update Profile</p></div></a>
             <a href="notification.html"><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon name="notifications-outline" class="mt-1" ></ion-icon><p class="ml-1"> Notification</p></div></a>
