--- a/index.html
+++ b/index.html
@@ -402,7 +402,10 @@
 
              <section class="flex flex-col items-center justify-center py-24 space-y-5">
               <h1 class="text-4xl font-semibold dm-sans-regular text-purple-700">Have an emergency?</h1>
-              <p class="text-center w-[60vw]">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur earum qui ipsum doloremque, unde nesciunt accusantium minima inventore hic totam repudiandae sapiente nobis et autem nam sit harum consequuntur recusandae?</p>
+              <p class="text-center w-[60vw]">
+                In case of emergency, please reach out to us immediately. Your safety and well-being are our top priorities. We're here to help, support, and guide you through any situation you may encounter.
+                
+                Please don't hesitate to contact us if you feel uncomfortable, threatened, or in need of assistance. Our dedicated team is available 24/7 to provide confidential support and connect you with resources that can help.</p>
                  
                 <div class="text-center space-x-4 dm-sans-regular ">You can reach out to us @ 
                   <p class="font-semibold mt-2">
@@ -443,7 +446,7 @@
                         <h5 class="">Explore More</h5>
                         <ul class="mt-2 ">
                             <li><a href="#">FAQs</a></li>
-                            <li><a href="#">Blog</a></li>
+                            <li><a href="createaccount.html">Sign Up</a></li>
                             <li><a href="#">Privacy Policy</a></li>
                             <li><a href="#">Terms and Conditions</a></li>
                         </ul>
