Refactor:  Index.html

--- a/index.html
+++ b/index.html
@@ -384,9 +384,9 @@
            
             
 
-            <section class=" scroll-mt-24 photo-group-2  bg-gradient-to-tr from-purple-800 to-pink-400 py-16 pb-5 px-10 text-white">
-                  <div class="w-[80vw] mx-auto space-x-14   flex align-middle flex-row-reverse justify-between">
-                    <div class="  w-[60%]">
+            <section class=" scroll-mt-24 photo-group-2  bg-gradient-to-tr from-purple-800 to-pink-400 py-16 pb-5 md:px-10 text-white">
+                  <div class=" w-screen md:w-[80vw] mx-auto md:space-x-14   flex  flex-col align-middle md:flex-row-reverse justify-between">
+                    <div class=" mx-auto md:mx-0 w-[60%]">
                       <p class="place-self-center">To-nack is aworld of fun and pleasure!.  Whether you're looking for a one-night stand or a  long-term friend-with-benefits, sugar mummies and cougars, we've got  you covered. Join our community of like-minded people and explore your sexual desires in a safe place </p>
                       <a href="#sugarmums">
                         <button class=" mt-10 hover:bg-purple-700 dm-sans-regular bg-transparent border-2 px-3 rounded-xl py-2">Check out cougars!</button>
