report and update

--- a/Report.html
+++ b/Report.html
@@ -71,7 +71,7 @@
             <input type="text" placeholder="Name" class="border-2 border-black w-[65vw] h-[45px] lg:h-[40px] my-1 pl-3 focus:outline-purple-800 rounded-[5px]"><br>
             <input type="text" placeholder=" Offender's Name" class="border-2 border-black w-[65vw] h-[45px] lg:h-[40px] my-1 pl-3 focus:outline-purple-800 rounded-[5px]"><br>
             <input type="text" placeholder=" Offender's Id " class="border-2 border-black w-[65vw] h-[45px] lg:h-[40px] my-1 pl-3 focus:outline-purple-800 rounded-[5px]" ><br>
-            <input type="text" placeholder="Narration" class="border-2 border-black w-[65vw] h-[45px] lg-h-[40px] my-1 pl-3 focus:outline-purple-800 rounded-[5px]"> <br>
+            <textarea name="" id="" cols="10" rows="10"  class="border-2 border-black w-[65vw] h-[45px] lg-h-[40px] text-gray-300 my-1 pl-3 focus:outline-purple-800 rounded-[5px]" >Narration</textarea><br>
             <button type="submit" class="border-2 border-black w-[55vw] h-[45px] lg-h-[40px] my-1 mx-6 rounded-2xl bg-purple-800 text-white">Submit</button>
         </form>
 
