Update image sources to use 'asset' folder; add Tailwind CDN link
This commit updates the image sources in dashboard.html, notification.html, and update.html to use the 'asset' folder instead of the '

--- a/dashboard.html
+++ b/dashboard.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>profile</title>
     <script src="Tailwind/tailwind.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
@@ -25,15 +27,15 @@
             <ion-icon name="notifications-outline" class="hidden lg:block xl:block w-[30px] h-[30px] text-purple-800 ml-[45px] mt-[10px]" ></ion-icon>
             <ion-icon name="logo-wechat" class="hidden lg:block xl:block w-[30px] h-[30px] text-purple-800  ml-[10px] mt-[10px]"  ></ion-icon>
        
-         <img src="dating-imgages/falz.jpeg" alt="" class=" hidden lg:block xl:block w-[30px] h-[30px] rounded-[20px] ml-[10px] mt-[10px] ">
+         <img src="asset/falz.jpeg" alt="" class=" hidden lg:block xl:block w-[30px] h-[30px] rounded-[20px] ml-[10px] mt-[10px] ">
         
         </div>
         <!-- End of search bar -->
         <div class="block lg:flex xl:flex">
         <div class="hidden lg:block xl:block w-[80%] lg:w-[20%] xl:w-[20%] h-[400px] lg:h-[400px] xl:h-[500px] bg-purple-800 mt-[20px] ml-[20px]  pl-[40px] text-white pt-[40px]  " id="dashboard" style="border-top-left-radius: 70px;">
             <div class="flex  hover:font-[700] hover:text-[20px]"><ion-icon name="home-outline" class="mt-9"></ion-icon><p class="ml-2 mt-[30px]"> Home</p></div>
-            <a href="dashboard.html"><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><img src="dating-imgages/falz.jpeg" alt="" class="w-[20px] h-[20px] rounded-[50px] mt-1   "><p class="ml-2"> Profile</p></div></a>
-            <a href=""><div class="flex  hover:font-[700] hover:text-[19px] mt-[20px]"><ion-icon name="videocam-off-outline" class=" mt-1"></ion-icon><p class="ml-2"> Upload video/image</p></div></a>
+            <a href="dashboard.html"><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><img src="asset/falz.jpeg" alt="profile image" class="w-[20px] h-[20px] rounded-[50px] mt-1   "><p class="ml-2"> Profile</p></div></a>
+            <a href="uploadimage.html"><div class="flex  hover:font-[700] hover:text-[19px] mt-[20px]"><ion-icon name="videocam-off-outline" class=" mt-1"></ion-icon><p class="ml-2"> Upload video/image</p></div></a>
             <a href="hookup.html"><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon class="mt-1 " name="car-outline"></ion-icon><p class="ml-1"> My Hookup</p></div></a>
             <a href="update.html"><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon name="person-outline" class="mt-1"></ion-icon><p class="ml-1"> Update Profile</p></div></a>
             <a href="notification.html"><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon name="notifications-outline" class="mt-1" ></ion-icon><p class="ml-1"> Notification</p></div></a>
