--- a/notification.html
+++ b/notification.html
@@ -7,6 +7,8 @@
     <script src="Tailwind/tailwind.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 <body  >
     <div class="bg-purple-300 w-[100%]  sm:h-[550px] md:h-[550px]  lg:h-[557px] xl:h-[640px]   ">
@@ -23,14 +25,14 @@
             <ion-icon name="notifications-outline" class="hidden lg:block xl:block w-[30px] h-[30px] text-purple-800 ml-[45px] mt-[10px]" ></ion-icon>
             <ion-icon name="logo-wechat" class="hidden lg:block xl:block w-[30px] h-[30px] text-purple-800  ml-[10px] mt-[10px]"  ></ion-icon>
        
-         <img src="dating-imgages/falz.jpeg" alt="" class=" hidden lg:block xl:block w-[30px] h-[30px] rounded-[20px] ml-[10px] mt-[10px] ">
+         <img src="asset/falz.jpeg" alt="" class=" hidden lg:block xl:block w-[30px] h-[30px] rounded-[20px] ml-[10px] mt-[10px] ">
         
         </div>
         <!-- End of search bar -->
         <div class="block lg:flex xl:flex">
         <div class="hidden lg:block xl:block w-[80%] lg:w-[20%] xl:w-[20%] h-[400px] lg:h-[400px] xl:h-[500px] bg-purple-800 mt-[20px] ml-[20px]  pl-[40px] text-white pt-[40px]  " id="dashboard" style="border-top-left-radius: 70px;">
             <div class="flex  hover:font-[700] hover:text-[20px]"><ion-icon name="home-outline" class="mt-9"></ion-icon><p class="ml-2 mt-[30px]"> Home</p></div>
-            <a href="dashboard.html"><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><img src="dating-imgages/falz.jpeg" alt="" class="w-[20px] h-[20px] rounded-[50px] mt-1   "><p class="ml-2"> Profile</p></div></a>
+            <a href="dashboard.html"><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><img src="asset/falz.jpeg" alt="" class="w-[20px] h-[20px] rounded-[50px] mt-1   "><p class="ml-2"> Profile</p></div></a>
             <a href=""><div class="flex  hover:font-[700] hover:text-[19px] mt-[20px]"><ion-icon name="videocam-off-outline" class=" mt-1"></ion-icon><p class="ml-2"> Upload video/image</p></div></a>
             <a href="hookup.html"><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon class="mt-1 " name="car-outline"></ion-icon><p class="ml-1"> My Hookup</p></div></a>
             <a href="update.html"><div class="flex  hover:font-[700] hover:text-[20px] mt-[20px]"><ion-icon name="person-outline" class="mt-1"></ion-icon><p class="ml-1"> Update Profile</p></div></a>
@@ -55,7 +57,7 @@
             <!-- image div -->
             <div class="flex justify-between pt-[70px]">
              <div class=" ml-[20px]">
-                <img src="dating-imgages/pexels-darcy-delia-345397-950758.jpg" alt="" class="w-[150px] h-[150px] rounded-[50%]">
+                <img src="asset/pexels-darcy-delia-345397-950758.jpg" alt="" class="w-[150px] h-[150px] rounded-[50%]">
                 <div class="mt-[10px] pl-[30px] text-purple-800">
                     <p>Amaka Obi</p>
                     <div class="flex">                    
@@ -66,7 +68,7 @@
                   </div>
              </div>
              <div>
-                <img src="dating-imgages/21786964_019_dcf3.jpg" alt="" class="w-[150px] h-[150px] rounded-[50%]" >
+                <img src="asset/21786964_019_dcf3.jpg" alt="" class="w-[150px] h-[150px] rounded-[50%]" >
                 <div class="mt-[10px] pl-[30px]">
                     <p>Aisha Jubril</p>
                     <div class="flex">                    
@@ -77,7 +79,7 @@
                   </div>
              </div>
              <div>
-                <img src="dating-imgages/74504689_006_1005.jpg" alt="" class="w-[150px] h-[150px] rounded-[50%]" >
+                <img src="asset/74504689_006_1005.jpg" alt="" class="w-[150px] h-[150px] rounded-[50%]" >
                 <div class="mt-[10px] pl-[30px] ">
                   <p>Kemi Olaiya</p>
                   <div class="flex">                    
@@ -88,7 +90,7 @@
                 </div>
                </div>
              <div class="mr-[30px]">
-                <img src="dating-imgages/59096524_007_746a.jpg" alt="" class="w-[150px] h-[150px] rounded-[50%]">
+                <img src="asset/59096524_007_746a.jpg" alt="" class="w-[150px] h-[150px] rounded-[50%]">
                 <div class="mt-[10px] pl-[30px] ">
                     <p>Glory Mbong</p>
                     <div class="flex">                    
