--- a/login.html
+++ b/login.html
@@ -13,8 +13,8 @@
     
     <div class="lg:w-[50%] w-[100vw] lg:h-[685px] bg-white lg:bg-white rounded-[25px] lg:ml-10 ">
    
-    <div class="lg:w-[50%] w-[100vw] lg:h-[685px] lg:shadow-2xl bg-white lg:bg-white rounded-[25px] lg:ml-10 ">
-
+    <div class="lg:w-[100%] w-[100vw] lg:h-[685px] lg:shadow-2xl lg:shadow-purple-400 bg-white lg:bg-white rounded-[25px] lg:ml-10 ">
+        <h1 class=" lg:mt-[8px] lg:mb-6 lg:pt-16 text-center text-purple-800 text-5xl font-[700]">Login</h1><br><br class="hidden md:block lg:hidden">
        
        <div class="lg:pl-8 px-6 md:mx-10">
            <p class="text-[500]">Don't have an account? <a href="createaccount.html"><b class="ml-2 lg:ml-4 text-purple-800">Create an accoount</b></a></p>
@@ -58,7 +58,7 @@
 
  .slider{
     width: 720px;
-    height: 680px;
+    height: 695px;
     background: url(/asset/1\ \(1\).webp);
     animation: slide 30s infinite;
  }
