Refactor: index.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -56,7 +56,7 @@
         <ion-icon name="notifications-outline" class=" ml-[10px] text-purple-800 w-[20px] h-[20px] lg:ml-[20px] xl:ml-[20px]" ></ion-icon>
          </div>
             <p class=" ml-[40px] lg:ml-[130px] xl:ml-[130px] mt-[20px]  lg:mt-[40px] xl:mt-[40px] text-purple-800 text-2xl">Profile</p>
-            <img src="dating-imgages/falz.jpeg" alt="" class=" mt-[20px] md:mt-[20px] ml-[10px] lg:ml-[50px] w-[150px]  lg:w-[200px] xl:w-[300px] h-[150px] lg:h-[200px] xl:h-[300px] rounded-[50%]">
+            <img src="asset/falz.jpeg" alt="" class=" mt-[20px] md:mt-[20px] ml-[10px] lg:ml-[50px] w-[150px]  lg:w-[200px] xl:w-[300px] h-[150px] lg:h-[200px] xl:h-[300px] rounded-[50%]">
             <p class=" ml-[20px] lg:ml-[100px] xl:ml-[100px]  mt-[10px]  text-purple-800"> Status: <b>Available</b></p>
             
             <div class="ml-[180px] lg:ml-[300px] xl:ml-[420px] mt-[-220px] lg:mt-[-250px]  xl:mt-[-300px]">
