adjust dashboard image size

--- a/femaledashboard.html
+++ b/femaledashboard.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Female Dashboard</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <link rel="stylesheet" href="./src/output.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
@@ -101,7 +103,7 @@
                            <div class=" text-center">
                                <p class=" mt-[30px] text-white text-3xl font-[500]">Profile</p><br>
     
-                               <img src="/asset/1 (1).webp" alt="pic" class=" mt-[20px] w-[300px] mx-[auto] md:mx-[auto] lg:w-[300px] h-[300px] lg:h-[300px] rounded-[300px]">
+                               <img src="/asset/1 (1).webp" alt="pic" class=" mt-[20px] w-[300px] mx-[auto] md:mx-[auto] lg:w-[350px]  rounded-full">
     
                                <div class="flex justify-center gap-2">
                                   <p class="  mt-[10px]  text-white"> Status: <b>Available</b></p>
