Add: FEMALE SIGNUP PAGE

--- a/gendervalidation.html
+++ b/gendervalidation.html
@@ -63,11 +63,11 @@
   <script>
     function redirect() {
       alert("You will be redirected to the login page ....");
-      window.location.href = "./createaccount.html"; // corrected the syntax here
+      window.location.href = "./malesignup.html"; // corrected the syntax here
     }
     function redirect2() {
       alert("You will be redirected to the login page");
-      window.location.href = "./createaccount.html"; // corrected the syntax here
+      window.location.href = "./femalesignup.html"; // corrected the syntax here
 
 
    
