--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
       </div>
   </div>
   <div>
-    <a class=" ml-[60%] cursor-pointer md:ml-[80%]   mt-[50px] bg-gradient-to-r from-purple-500 to-pink-500 text- px-4 py-2 rounded-full hover:opacity-80 text-white calligraffitti-regular tracking-wide font-semibold"> 
+    <a href="web.html" class=" ml-[60%] cursor-pointer md:ml-[80%]   mt-[50px] bg-gradient-to-r from-purple-500 to-pink-500 text- px-4 py-2 rounded-full hover:opacity-80 text-white calligraffitti-regular tracking-wide font-semibold"> 
       see more</a>
   </div>
 </section>
@@ -425,11 +425,11 @@
                             <p class="font-bold text-purple-900 text-lg">Find Your Next Hookup</p>
                             <p class="">Get connected any time, any day!</p>
                         </div>
-                        <address class="tex">
+                        <!-- <address class="tex">
                             Office Address: <br>
                             Shop G18 Activities, Lasustech, <br>
                             Ikorodu, Lagos, Nigeria
-                        </address>
+                        </address> -->
                     </div>
                     <div class="md:w-1/3">
                         <h5 class="">Programs</h5>
