--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a href="#"  class="font-semibold text-md dm-sans-regular hover:text-purple-300">Privacy</a>
                      </div>
                     <a href="gendervalidation.html">
-                    <button class="mr-5 text-white  rounded-xl text-xs md:text-md md:rounded-full bg-gradient-to-r from-purple-600 to-pink-400 border-2 border-purple-600  font-semibold px-5 py-1 md:py-3 text-center w-[100px] md:w-[180px] height-[60px] hover:opacity-7">Get Started</button>
+                    <button class="mr-5 text-white  rounded-xl text-xs md:text-md md:rounded-full bg-gradient-to-r from-purple-600 to-pink-400 border-2 border-purple-600  font-semibold px-5 py-1 md:py-3 text-center w-[100px] md:w-[180px] height-[60px] hover:opacity-7">Sign Up/ Sign In</button>
                     </a>
                   </div>
 
