--- a/malesignup.html
+++ b/malesignup.html
@@ -54,7 +54,7 @@
                 
                 <input type="checkbox" class="  mt-[30px] md:mt-[35px]">
                 <p class="text-purple-800  ml-[30px] mt-[-25px] ">Agree to  Terms & Conditions</p>
-                <button type="submit" class="text-white bg-purple-800  ml-[80px] md:ml-[150px] lg:ml-[80px] xl:ml-[150px] w-[200px] mt-[10px] lg:w-[455px] md:w-[400px] md:mt-[20px] md:h-[50px] h-[40px] lg:h-[40px] rounded-[20px] md:rounded-[50px]  ">Sign up</button>
+                <button type="submit" class="text-white bg-purple-800  ml-[80px] md:ml-[150px] lg:ml-[80px] xl:ml-[150px] w-[200px] mt-[10px] lg:w-[455px] md:w-[400px] md:mt-[20px] md:h-[50px] h-[40px] lg:h-[40px] rounded-md md:rounded-[50px6]  ">Sign up</button>
                 <p class="text-purple-800 mt-[5px] ml-[50px] md:ml-[200px]  xl:ml-[200px] lg:ml-[150px] " >Already have an account?<a href="" class="text-purple-800 "> sign in.</a></p>
                 
             </form>
